Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47789

winrt: Status bar not hidden.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • GUI: Window management
    • None
    • windows phone, Qt 5.7 (dev)
    • WinRT
    • b349289fa0003da58adb5cee51e5c2e093a6dd6f

      Status bar is not hidden on application start up on windows phone. This is a regression from https://codereview.qt-project.org/#/c/122756/

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes